Fix alignment of input overlays and attached buttons in Firefox

--- a/packages/web-components/src/components/cbp-form-field-wrapper/cbp-form-field-wrapper.scss
+++ b/packages/web-components/src/components/cbp-form-field-wrapper/cbp-form-field-wrapper.scss
@@ -31,6 +31,7 @@ cbp-form-field-wrapper {
     // All named slots within the shrinkwrap element are overlays
     [slot] {
       position: absolute;
+      inset-block-start: 0; // Needed for Firefox
       display: inline-flex;
       align-items: center;
       height: 100%;
